Tests and some documentation added